# evoxels

./: .gitignore  CH_solver_example.ipynb  CONTRIBUTING.md  README.md  paper.bib  paper.md  pyproject.toml  setup.py  solver_testing.ipy  solver_testing.ipynb
.github/workflows/: draft-pdf.yml  publish.yml  python-package.yml
benchmark_scripts/: run_diffrax_benchmark.py  run_jax_benchmark.py  run_torch_benchmark.py  run_torchode_benchmark.py
docs/: api.rst  authors.rst  conf.py  index.rst
docs/notebooks/: 00-using-voxelfields.ipynb  01-using-solvers.ipynb  03-ODE-prototyping.ipynb  04-parameter-estimation.ipynb  10-appendix-convergence-testing.ipynb
evoxels/: boundary_conditions.py  inversion.py  problem_definition.py  solvers.py  timesteppers.py  utils.py  voxelfields.py  voxelgrid.py
evoxels/precompiled_solvers/: allen_cahn.py  cahn_hilliard.py
notebooks/: 00-using-voxel-fields.ipynb  00-using-voxelfields.ipynb  01-Cahn-Hilliard-solvers.ipynb  01-legacy-solvers.ipynb  02-Cahn-Hilliard-convergence-tests.ipynb  02-voxelgrid-convergence-testing.ipynb  03-solver-rhs-testing.ipynb  04-inversion.ipynb
tests/: __init__.py  test_fields.py  test_inversion.py  test_laplace.py  test_laplacian.py  test_rhs.py  test_solvers.py  test_voxelgrid.py
voxelsss/: __init__.py  fields.py  function_approximators.py  inversion.py  problem_definition.py  profiler.py  solvers.py  solvers_basic.py  solvers_phasefield.py  timesteppers.py  utils.py  voxelfields.py  voxelgrid.py  voxelsss.py
voxelsss/precompiled_solvers/: __init__.py  allen_cahn.py  cahn_hilliard.py  (+1 more)
